Added jvm gc log event notes